updated user auth for smart.patient_id form entry

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="/" class="site_title"><i class="fa fa-medkit"></i> <span>Healthcare App (built by GCP)</span></a>
+              <a href="/" class="site_title"><i class="fa fa-medkit"></i> <span>Healthcare App (developed on GCP)</span></a>
             </div>
 
             <div class="clearfix"></div>
